<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_seccion_1"
            android:icon="@drawable/ic_foto"
            android:title="@string/seccion_1"/>
        <item
            android:id="@+id/menu_seccion_2"
            android:icon="@drawable/ic_musica"
            android:title="@string/seccion_2"/>
        <item
            android:id="@+id/menu_seccion_3"
            android:icon="@drawable/ic_tv"
            android:title="@string/seccion_3"/>
    </group>

    <item
        android:id="@+id/navigation_subheader"
        android:title="@string/mas_opciones">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_opcion_1"
                    android:icon="@drawable/ic_subir"
                    android:title="@string/opcion_1"/>
                <item
                    android:id="@+id/menu_opcion_2"
                    android:icon="@drawable/ic_bajar"
                    android:title="@string/opcion_2"/>
            </group>
        </menu>
    </item>
</menu>